# auto-gmail-creator

./: .gitignore  CNAME  README.md  pyproject.toml
.github/workflows/: ci.yml
auto_gmail_creator/: __init__.py  cli.py  generator.py  utils.py
docs/: index.md
tests/: __init__.py  test_cli.py  test_generator.py
