[tool.poetry]
name = "auto-gmail-creator"
version = "0.1.1"
description = "A simulation tool for bulk Gmail account creation for educational and testing purposes."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/your-username/auto-gmail-creator"
repository = "https://github.com/your-username/auto-gmail-creator"
keywords = ["gmail", "automation", "simulation", "testing", "cli"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
faker = "^15.3.4"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
ruff = "^0.0.290"
mypy = "^0.991"

click = {version = "^8.1.3", extras = ["testing"]}

[tool.poetry.scripts]
agc = "auto_gmail_creator.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "D"]

[tool.mypy]
strict = true
ignore_missing_imports = true
